make-a-wish-salesforce/src/objects/Medical_Question_Response_Option__c.object
<CustomObject>
    <description>Captures an MP's responses to conditionally displayed medical questions that appear on the Diagnosis Verification Form.</description>
    <fields>
        <fullName>Medical_Question__c</fullName>
        <description>Captures the related medical question for this response record.</description>
        <label>Medical Question</label>
        <referenceTo>Medical_Questions__c</referenceTo>
        <relationshipLabel>Medical Question Response (Options)</relationshipLabel>
        <relationshipName>Medical_Question_Response_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Next_Action__c</fullName>
        <description>Captures the a Next Action to be taken if the answer provided to the related medical question matches the response in this record.</description>
        <label>Next Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualifies</fullName>
                </value>
                <value>
                    <fullName>Specified Question</fullName>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the Next Question to ask if the Next Action = “Specified Question” logic fires.</description>
        <label>Next Question</label>
        <referenceTo>Medical_Questions__c</referenceTo>
        <relationshipLabel>Medical Question Response (Options - Next Question)</relationshipLabel>
        <relationshipName>Medical_Question_Response_Options1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Captures the response value for that drives the Next Action.</description>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Captures the order in which the response values should be considered and actioned</description>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Medical Question Response (Option)</label>
    <nameField>
        <displayFormat>MQR-{0000}</displayFormat>
        <label>Medical Question Response (Option) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Question Response (Options)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>